# moon-extensions

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/common/: Cargo.toml
crates/common/src/: download.rs  lib.rs  migrator.rs  project_graph.rs
crates/dl/: Cargo.toml
crates/dl/src/: lib.rs
crates/dl/tests/: dl_test.rs
crates/dlu/: Cargo.toml
crates/dlu/src/: lib.rs
crates/download/: CHANGELOG.md  Cargo.toml
crates/download/src/: download_ext.rs  lib.rs
crates/download/tests/: download_test.rs
crates/migrate-nx/: CHANGELOG.md  Cargo.toml
crates/migrate-nx/src/: lib.rs  migrate_nx.rs  migrate_nx_ext.rs  nx_json.rs  nx_migrator.rs  nx_project_json.rs  workspace_migrator.rs
crates/migrate-nx/tests/: migrate_nx_test.rs
crates/migrate-nx/tests/__fixtures__/nx-executors/: project.json
crates/migrate-nx/tests/__fixtures__/project-inputs/: project.json
crates/migrate-nx/tests/__fixtures__/project-name-deps/: project.json
crates/migrate-nx/tests/__fixtures__/project-targets/: project.json
crates/migrate-nx/tests/__fixtures__/project-type-tags/app/: project.json
crates/migrate-nx/tests/__fixtures__/project-type-tags/lib/: project.json
crates/migrate-nx/tests/__fixtures__/projects/bar/: project.json
crates/migrate-nx/tests/__fixtures__/projects/baz/: project.json
crates/migrate-nx/tests/__fixtures__/projects/foo/: project.json
crates/migrate-nx/tests/__fixtures__/root/: nx.json  workspace.json
crates/migrate-nx/tests/snapshots/: migrate_nx_test__migrate_nx__converts_nx_builtin_executors.snap  migrate_nx_test__migrate_nx__converts_root_files-2.snap  migrate_nx_test__migrate_nx__converts_root_files.snap  migrate_nx_test__migrate_nx__nx_json__converts_named_inputs.snap  migrate_nx_test__migrate_nx__projects__converts_name_and_implicit_deps.snap  migrate_nx_test__migrate_nx__projects__converts_named_inputs.snap  migrate_nx_test__migrate_nx__projects__converts_project_json-2.snap  migrate_nx_test__migrate_nx__projects__converts_project_json-3.snap  migrate_nx_test__migrate_nx__projects__converts_project_json.snap  migrate_nx_test__migrate_nx__projects__converts_targets.snap  migrate_nx_test__migrate_nx__projects__converts_type_and_tags-2.snap  migrate_nx_test__migrate_nx__projects__converts_type_and_tags.snap  migrate_nx_test__migrate_nx__projects__uses_defaults.snap  migrate_nx_test__migrate_nx__workspace_projects__inherits_layout.snap
crates/migrate-turborepo/: CHANGELOG.md  Cargo.toml
crates/migrate-turborepo/src/: lib.rs  migrate_turborepo.rs  migrate_turborepo_ext.rs  turbo_json.rs  turbo_migrator.rs
crates/migrate-turborepo/tests/: migrate_turborepo_test.rs
crates/migrate-turborepo/tests/__fixtures__/error-missing-project/: turbo.json
crates/migrate-turborepo/tests/__fixtures__/error-missing-project-deps/: turbo.json
crates/migrate-turborepo/tests/__fixtures__/monorepo/: turbo.json
crates/migrate-turborepo/tests/__fixtures__/monorepo/.moon/: workspace.yml
crates/migrate-turborepo/tests/__fixtures__/monorepo/client/: package.json  turbo.json
crates/migrate-turborepo/tests/__fixtures__/monorepo/server/: turbo.json
crates/migrate-turborepo/tests/__fixtures__/root-merge-existing/.moon/: workspace.yml
crates/migrate-turborepo/tests/__fixtures__/root-merge-existing/.moon/tasks/: node.yml
crates/migrate-turborepo/tests/__fixtures__/root-only/: turbo.json
crates/migrate-turborepo/tests/__fixtures__/root-project/: turbo.json
crates/migrate-turborepo/tests/snapshots/: migrate_turborepo_test__migrate_turborepo__can_force_bun_instead_of_node-2.snap  migrate_turborepo_test__migrate_turborepo__can_force_bun_instead_of_node-3.snap  migrate_turborepo_test__migrate_turborepo__can_force_bun_instead_of_node.snap  migrate_turborepo_test__migrate_turborepo__converts_basic_root_file.snap  migrate_turborepo_test__migrate_turborepo__converts_project_files-2.snap  migrate_turborepo_test__migrate_turborepo__converts_project_files-3.snap  migrate_turborepo_test__migrate_turborepo__converts_project_files.snap  migrate_turborepo_test__migrate_turborepo__converts_to_a_root_project.snap  migrate_turborepo_test__migrate_turborepo__merges_with_existing_root_tasks.snap
crates/unpack/: CHANGELOG.md  Cargo.toml
crates/unpack/src/: lib.rs  unpack_ext.rs
crates/unpack/tests/: unpack_test.rs
crates/unpack/tests/__fixtures__/tar/: archive.tar
