[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
extism-pdk = "1.1.0"
moon_common = "0.0.4"
moon_config = "0.0.5"
moon_pdk = "0.0.5"
moon_pdk_test_utils = "0.0.6"
moon_target = "0.0.3"
rustc-hash = "1.1.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.33"
starbase_utils = { version = "0.6.1", default-features = false }
starbase_sandbox = "0.5.0"

# moon_common = { path = "../moon/nextgen/common" }
# moon_config = { path = "../moon/nextgen/config" }
# moon_pdk = { path = "../moon/nextgen/pdk" }
# moon_pdk_test_utils = { path = "../moon/nextgen/pdk-test-utils" }
# moon_target = { path = "../moon/nextgen/target" }

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
