[package]
name = "moon_extension_common"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
extism-pdk = { workspace = true }
moon_config = { workspace = true }
moon_pdk = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["yaml"] }
