[package]
name = "moon_download_extension"
version = "0.0.3"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[package.metadata.release]
pre-release-replacements = [
	{ file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[dependencies]
moon_extension_common = { path = "../common" }
extism-pdk = { workspace = true }
moon_pdk = { workspace = true }

[dev-dependencies]
moon_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = ["wasm"]
wasm = []
