[package]
name = "moon_unpack_extension"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[lib]
crate-type = ['cdylib']

[package.metadata.release]
pre-release-replacements = [
	{ file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[dependencies]
moon_extension_common = { path = "../common" }
extism-pdk = { workspace = true }
moon_pdk = { workspace = true }
starbase_archive = { version = "0.8.4", default-features = false, features = [
	"tar-gz",
	"zip",
] }

[dev-dependencies]
moon_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
